# fluidsynth

./: .cproject  .project  CMakeLists.txt  README.md
include/: fluidsynth.cmake
src/: CMakeLists.txt  config.cmake  singleheader.sh
src/rvoice/: fluid_rvoice_mixer.c
src/synth/: fluid_synth.h
src/utils/: fluid_glib_remover.h  fluid_settings.c  fluid_sys.c  fluid_sys.h  fluidsynth_priv.h
